--- a/basemvvm/build.gradle
+++ b/basemvvm/build.gradle
@@ -30,14 +30,14 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'androidx.core:core-ktx:1.2.0-alpha03'
     api 'com.orhanobut:logger:2.2.0'
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'com.github.github2136:Android-utils:1b1f5b60d1'
-    api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.okhttp3:okhttp:4.0.1'
+
     api 'com.google.android.material:material:1.1.0-alpha09'
 
-    kapt "com.android.databinding:compiler:3.1.4"
-    kapt 'android.arch.lifecycle:compiler:1.1.1'
+    api 'com.github.github2136:Android-utils:1b1f5b60d1'
+    api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.recyclerview:recyclerview:1.0.0'
+    api 'com.google.code.gson:gson:2.8.5'
 
     androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
     testImplementation 'junit:junit:4.12'
