--- a/basemvvm/build.gradle
+++ b/basemvvm/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'androidx.core:core-ktx:1.2.0-alpha03'
+
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+
     api 'com.orhanobut:logger:2.2.0'
     api 'com.squareup.okhttp3:okhttp:4.0.1'
 
