--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.3.41'
     repositories {
+        google()
+        jcenter()
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.google.com/' }
@@ -18,6 +20,8 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
+        jcenter()
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.google.com/' }
