--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,15 @@ android {
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation lib['kotlin-stdlib']
     implementation project(path: ':basemvvm')
+
+    implementation lib['kotlin-stdlib']
+
+    //协程
+    implementation lib['android-coroutines']
+    implementation lib['android-viewmodel-ktx']
+    implementation lib['android-lifecycle-ktx']
+
     kapt lib['android-databinding']
 
     androidTestImplementation lib['android-test']
