--- a/config.gradle
+++ b/config.gradle
@@ -25,6 +25,10 @@ ext {
             'android-recyclerview'      : 'androidx.recyclerview:recyclerview:1.0.0',
             'android-swiperefreshlayout': 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0',
             'android-databinding'       : 'com.android.databinding:compiler:3.1.4',//dataBinding需要的编译处理工具
+            //协程
+            'android-coroutines'        : 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0',
+            'android-viewmodel-ktx'     : 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0',
+            'android-lifecycle-ktx'     : 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0',
             //测试代码
             'android-test'              : 'androidx.test:runner:1.3.0-alpha02',
             'junit'                     : 'junit:junit:4.12',
