--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,16 +33,16 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':basemvvm')
 
-    implementation lib['kotlin-stdlib']
+    implementation lib["kotlin-stdlib"]
 
     //协程
-    implementation lib['android-coroutines']
-    implementation lib['android-viewmodel-ktx']
-    implementation lib['android-lifecycle-ktx']
+    implementation lib["android-coroutines"]
+    implementation lib["android-viewmodel-ktx"]
+    implementation lib["android-lifecycle-ktx"]
 
-    kapt lib['android-databinding']
+    kapt lib["android-databinding"]
 
-    androidTestImplementation lib['android-test']
-    testImplementation lib['junit']
-    androidTestImplementation lib['espresso']
+    androidTestImplementation lib["android-test"]
+    testImplementation lib["junit"]
+    androidTestImplementation lib["espresso"]
 }
