--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activity.MainActivity" />
+        <activity android:name=".view.activity.NodeListActivity" />
 
         <meta-data
             android:name="util_sp_name"
