--- a/basemvvm/build.gradle
+++ b/basemvvm/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven-publish'
 
 def lib = rootProject.ext.dependencies
