--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@ apply from: "config.gradle"
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
+        maven { url 'https://repo1.maven.org/maven2/' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.google.com/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
@@ -20,12 +22,14 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://repo1.maven.org/maven2/' }
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
-        maven { url 'https://maven.google.com/' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://jitpack.io' }
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
