--- a/config.gradle
+++ b/config.gradle
@@ -5,35 +5,27 @@ ext {
             minSdkVersion    : 21,
             targetSdkVersion : 28,
     ]
-    dependVersion = [
-            retrofit2_version: "2.6.1",
-            room_version     : "2.2.5",
-            work_version     : "2.4.0",
-            glide_version    : "4.8.0"
-    ]
     dependencies = [
-            //kotlin相关
-            "kotlin-stdlib"             : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            "kotlin-ktx"                : "androidx.core:core-ktx:1.2.0-alpha03",
-            //json转换类
+            //gson
             "gson"                      : "com.google.code.gson:gson:2.8.5",
-            //基础功能类
-            "android-util"              : "com.github.github2136:Android-utils:1.1.6",
             //日志打印
             "logger"                    : "com.orhanobut:logger:2.2.0",
             //网络请求
             "okhttp"                    : "com.squareup.okhttp3:okhttp:4.0.1",
-            "okhttp-retrofit"           : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit2_version}",
-            "okhttp-gson"               : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit2_version}",
+            "okhttp-retrofit"           : "com.squareup.retrofit2:retrofit:2.6.1",
+            "okhttp-gson"               : "com.squareup.retrofit2:converter-gson:2.6.1",
+            //基础功能类
+            "android-util"              : "com.github.github2136:Android-utils:1.1.6",
             //Android支持库
-            "android-appcompat"         : "androidx.appcompat:appcompat:1.1.0",
-            "android-material"          : "com.google.android.material:material:1.1.0-alpha09",
-            "android-recyclerview"      : "androidx.recyclerview:recyclerview:1.0.0",
+            "android-appcompat"         : "androidx.appcompat:appcompat:1.3.1",
+            "android-recyclerview"      : "androidx.recyclerview:recyclerview:1.2.1",
             "android-swiperefreshlayout": "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
+            "android-material"          : "com.google.android.material:material:1.4.0",
             //协程
-            "android-coroutines"        : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0",
-            "android-viewmodel-ktx"     : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0",
-            "android-lifecycle-ktx"     : "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0",
+            "android-coroutines"        : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3",
+            //ktx扩展
+            "core-ktx"                  : "androidx.core:core-ktx:1.5.0",
+            "android-viewmodel-ktx"     : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1",
             //测试代码
             "android-test"              : "androidx.test:runner:1.3.0-alpha02",
             "android-test-ext"          : "androidx.test.ext:junit:1.1.1",
