--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation lib["android-swiperefreshlayout"]
     implementation lib["core-ktx"]
     implementation lib["android-viewmodel-ktx"]
+    implementation lib["android-lifecycle-ktx"]
     //协程
     implementation lib["android-coroutines"]
     //gson
