--- a/config.gradle
+++ b/config.gradle
@@ -26,6 +26,7 @@ ext {
             //ktx扩展
             "core-ktx"                  : "androidx.core:core-ktx:1.5.0",
             "android-viewmodel-ktx"     : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1",
+            "android-lifecycle-ktx"     : "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1",
             //测试代码
             "android-test"              : "androidx.test:runner:1.3.0-alpha02",
             "android-test-ext"          : "androidx.test.ext:junit:1.1.1",
