--- a/config.gradle
+++ b/config.gradle
@@ -1,26 +1,33 @@
 //统一配置
 ext {
     android = [
-            compileSdkVersion: 28,
+            compileSdkVersion: 30,
             minSdkVersion    : 21,
-            targetSdkVersion : 28,
+            targetSdkVersion : 30,
+    ]
+    dependVersion = [
+            retrofit2_version: "2.9.0",
     ]
     dependencies = [
             //gson
-            "gson"                      : "com.google.code.gson:gson:2.8.5",
+            "gson"                      : "com.google.code.gson:gson:2.10.1",
             //日志打印
             "logger"                    : "com.orhanobut:logger:2.2.0",
             //网络请求
-            "okhttp"                    : "com.squareup.okhttp3:okhttp:4.0.1",
-            "okhttp-retrofit"           : "com.squareup.retrofit2:retrofit:2.6.1",
-            "okhttp-gson"               : "com.squareup.retrofit2:converter-gson:2.6.1",
+            "okhttp"                    : "com.squareup.okhttp3:okhttp:4.10.0",
+            "okhttp-retrofit"           : "com.squareup.retrofit2:retrofit:${dependVersion.retrofit2_version}",
+            "okhttp-gson"               : "com.squareup.retrofit2:converter-gson:${dependVersion.retrofit2_version}",
             //基础功能类
-            "android-util"              : "com.github.github2136:Android-utils:1.1.6",
+            "android-util"              : "com.github.github2136:Android-utils:1.3.0",
             //Android支持库
             "android-appcompat"         : "androidx.appcompat:appcompat:1.3.1",
             "android-recyclerview"      : "androidx.recyclerview:recyclerview:1.2.1",
             "android-swiperefreshlayout": "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0",
             "android-material"          : "com.google.android.material:material:1.4.0",
+            "android-constraintlayout"  : "androidx.constraintlayout:constraintlayout:1.1.3",
+            "android-coordinatorlayout" : "androidx.coordinatorlayout:coordinatorlayout:1.1.0",
+            "android-cardview"          : "androidx.cardview:cardview:1.0.0",
+            "android-flexbox"           : "com.google.android.flexbox:flexbox:3.0.0",
             //协程
             "android-coroutines"        : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3",
             //ktx扩展
